[ci publish] 2.0.0+1.21: Use HTTP Client to download remote data